# stronger-start-calc

./: .gitignore  README.md  generate_dynamic_charts.py  generate_post.py  pyproject.toml  setup.py
.github/workflows/: deploy-charts.yml
docs/: avg-benefit-by-decile.html  baseline-reform-comparison.html  net-income-change.html  robots.txt  sitemap.xml  winners-by-decile.html
stronger_start/: __init__.py  charts.py  household.py  reform.py  simulation.py  statewide.py  ten_year_impact.py  ten_year_simulation.py
stronger_start/dynamic_charts/: __init__.py  charts.py  microsim.py
