[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stronger-start-calc"
version = "0.1.0"
description = "Analysis of the Stronger Start for Working Families Act"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "policyengine-us>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
include = ["stronger_start*"]
